--- a/LiveSite/css/iefonts_index.css
+++ b/LiveSite/css/iefonts_index.css
@@ -1,14 +1,9 @@
-#u158-4,#u159-4,#u160-4,#u156-4,#u168-4,#u171-4,#u379-4
+#u158-4,#u749-4,#u750-4,#u156-4,#u168-4,#u171-4,#u220-4,#u221-4,#u243-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u419-4,#u220-4,#u221-4,#u243-4
-{
-	font-family: asap-n4, sans-serif;
-}
-
-#u132-4,#u82-4,#u81-4,#u407-4,#u410-4,#u328-4,#u625-4
+#u132-4,#u82-4,#u81-4,#u328-4,#u625-4
 {
 	font-family: asap-n7, sans-serif;
 }
@@ -43,12 +38,17 @@
 	font-family: asap-n7, sans-serif;
 }
 
-#u621-4,#u568-6,#u599-4
+#u597-4,#u681-4
+{
+	font-family: asap-n7, sans-serif;
+}
+
+#u621-4,#u568-6,#u599-4,#u840-4,#u841-4,#u842-4,#u866-4
 {
 	font-family: asap-n4, sans-serif;
 }
 
-#u597-4,#u681-4
+#u837-4,#u863-4,#u857-4
 {
 	font-family: asap-n7, sans-serif;
 }
