--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #000018;
-	background-color: #69FD67;
+	color: #000015;
+	background-color: #BD90AA;
 }
 
 .html
@@ -13,7 +13,7 @@
 {
 	z-index: 1;
 	width: 960px;
-	min-height: 4244px;
+	min-height: 4019px;
 	background-image: none;
 	border-style: none;
 	border-color: #000000;
@@ -24,20 +24,20 @@
 
 #page_position_content
 {
-	padding-bottom: 499px;
+	padding-bottom: 274px;
 	width: 0.01px;
 }
 
 #u124
 {
-	z-index: 331;
+	z-index: 346;
 	height: 111px;
 	background-color: #000000;
 }
 
 #u124-bw
 {
-	z-index: 331;
+	z-index: 346;
 	position: fixed;
 	left: 0px;
 	right: 0px;
@@ -51,7 +51,7 @@
 
 #u149
 {
-	z-index: 336;
+	z-index: 351;
 	width: 48px;
 	background-color: transparent;
 	position: fixed;
@@ -61,12 +61,12 @@
 
 #u132-4
 {
-	z-index: 332;
+	z-index: 347;
 	width: 274px;
 	min-height: 25px;
 	background-color: transparent;
-	color: #FFFFFF;
 	line-height: 37px;
+	color: #FFFFFF;
 	font-size: 31px;
 	font-family: asap, sans-serif;
 	font-weight: 700;
@@ -77,81 +77,93 @@
 
 #u743
 {
-	z-index: 362;
+	z-index: 372;
 	width: 31px;
 	background-color: transparent;
-	margin-left: 466px;
-	margin-top: 2px;
-	position: relative;
-}
-
-#pu158-4
-{
-	width: 0.01px;
-	padding-bottom: 27px;
-	margin-left: 502px;
-	margin-top: -27px;
+	position: fixed;
+	top: 20px;
+	left: 397px;
 }
 
 #u158-4
 {
-	z-index: 342;
-	width: 76px;
-	min-height: 16px;
+	z-index: 357;
+	width: 84px;
+	min-height: 31px;
 	background-color: transparent;
+	line-height: 28px;
 	color: #FFFFFF;
-	line-height: 23px;
 	text-align: left;
-	font-size: 19px;
+	font-size: 23px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
-	top: 24px;
-	left: 502px;
+	top: 20px;
+	left: 433px;
 }
 
-#u159-4
+#u751
 {
-	z-index: 346;
-	width: 117px;
-	min-height: 16px;
+	z-index: 374;
+	width: 31px;
 	background-color: transparent;
-	color: #FFFFFF;
-	line-height: 23px;
-	text-align: center;
-	font-size: 19px;
-	font-family: asap, sans-serif;
-	font-weight: 400;
 	position: fixed;
-	top: 28px;
-	left: 634px;
+	top: 20px;
+	left: 553px;
 }
 
-#u160-4
+#u749-4
 {
-	z-index: 350;
-	width: 109px;
-	min-height: 16px;
+	z-index: 361;
+	width: 131px;
+	min-height: 31px;
 	background-color: transparent;
+	line-height: 28px;
 	color: #FFFFFF;
-	line-height: 23px;
-	text-align: center;
-	font-size: 19px;
+	text-align: left;
+	font-size: 23px;
 	font-family: asap, sans-serif;
 	font-weight: 400;
 	position: fixed;
-	top: 28px;
-	left: 783px;
+	top: 20px;
+	left: 589px;
+}
+
+#u868
+{
+	z-index: 376;
+	width: 31px;
+	background-color: transparent;
+	position: fixed;
+	top: 20px;
+	left: 761px;
+}
+
+#u750-4
+{
+	z-index: 365;
+	width: 144px;
+	min-height: 31px;
+	background-color: transparent;
+	line-height: 28px;
+	color: #FFFFFF;
+	text-align: left;
+	font-size: 23px;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: fixed;
+	top: 20px;
+	left: 796px;
 }
 
 #u156-4
 {
-	z-index: 338;
+	z-index: 353;
 	width: 112px;
 	min-height: 27px;
 	background-color: transparent;
-	color: #FFFFFF;
 	line-height: 12px;
+	color: #FFFFFF;
 	text-align: left;
 	font-size: 10px;
 	font-family: asap, sans-serif;
@@ -163,29 +175,29 @@
 
 #u161
 {
-	z-index: 354;
+	z-index: 369;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
 	position: fixed;
 	top: 60px;
-	left: 519px;
+	left: 433px;
 }
 
 #u162
 {
-	z-index: 355;
+	z-index: 370;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
 	position: fixed;
-	top: 61px;
-	left: 671px;
+	top: 60px;
+	left: 607px;
 }
 
 #u163
 {
-	z-index: 356;
+	z-index: 371;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -196,14 +208,14 @@
 
 #u114
 {
-	z-index: 365;
+	z-index: 379;
 	width: 50px;
 	min-height: 25px;
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
 	left: -179px;
-	margin-top: 34px;
+	margin-top: 67px;
 	position: relative;
 }
 
@@ -216,7 +228,7 @@
 
 #u75
 {
-	z-index: 364;
+	z-index: 378;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
@@ -228,7 +240,7 @@
 
 #u82-4
 {
-	z-index: 316;
+	z-index: 290;
 	width: 248px;
 	min-height: 41px;
 	background-color: transparent;
@@ -245,7 +257,7 @@
 
 #u170
 {
-	z-index: 324;
+	z-index: 298;
 	width: 170px;
 	height: 1px;
 	background-color: #7F7F7F;
@@ -255,7 +267,7 @@
 
 #u168-4
 {
-	z-index: 320;
+	z-index: 294;
 	width: 351px;
 	min-height: 63px;
 	background-color: transparent;
@@ -302,7 +314,7 @@
 
 #u171-4
 {
-	z-index: 325;
+	z-index: 299;
 	width: 226px;
 	min-height: 40px;
 	background-color: transparent;
@@ -319,7 +331,7 @@
 
 #u172
 {
-	z-index: 329;
+	z-index: 303;
 	width: 39px;
 	background-color: transparent;
 	margin-left: 461px;
@@ -346,301 +358,6 @@
 	margin-left: 85px;
 	margin-top: 142px;
 	position: relative;
-}
-
-#pamphletu389
-{
-	z-index: 285;
-	width: 0.01px;
-	height: 76px;
-	padding-bottom: 3px;
-	position: fixed;
-	top: 912px;
-	left: 957px;
-}
-
-#u390
-{
-	z-index: 286;
-	width: 59px;
-	position: relative;
-	margin-right: -10000px;
-}
-
-#u393
-{
-	position: absolute;
-	width: 59px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	padding-right: 7px;
-	padding-bottom: 3px;
-}
-
-#u380
-{
-	z-index: 292;
-	width: 59px;
-	background-color: transparent;
-	opacity: 0;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-	position: relative;
-}
-
-#u393:hover,#u393:hover #u380
-{
-	width: 59px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u393.PamphletThumbSelected #u380
-{
-	width: 59px;
-	min-height: 0px;
-	margin: 0px;
-}
-
-#u379-4
-{
-	z-index: 288;
-	width: 59px;
-	min-height: 17px;
-	background-color: transparent;
-	opacity: 0;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-	line-height: 8px;
-	text-align: center;
-	font-size: 7px;
-	font-family: asap, sans-serif;
-	font-weight: 400;
-	position: relative;
-}
-
-#u393:hover #u379-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 59px;
-	margin: 0px;
-}
-
-#u393.PamphletThumbSelected #u379-4
-{
-	padding-top: 0px;
-	padding-bottom: 0px;
-	min-height: 17px;
-	width: 59px;
-	margin: 0px;
-}
-
-.js #u380.ose_pre_init,.js #u379-4.ose_pre_init
-{
-	opacity: 0;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-}
-
-#u396
-{
-	position: absolute;
-	width: 710px;
-	border-style: none;
-	border-color: transparent;
-	background-color: #191919;
-	background-color: rgba(0,0,0,0.9);
-	padding-bottom: 44px;
-	top: 27px;
-	left: 149px;
-	-pie-background: rgba(0,0,0,0.9);
-}
-
-#u396popup
-{
-	z-index: 294;
-}
-
-#u397
-{
-	z-index: 295;
-	width: 641px;
-	height: 441px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #FFFFFF;
-	background-color: #FFFFFF;
-	margin-right: -10000px;
-	position: relative;
-	top: 22px;
-	left: 22px;
-	padding: 24px 15px 6px 8px;
-}
-
-#pu407-4
-{
-	width: 0.01px;
-	margin-left: 163px;
-}
-
-#u407-4
-{
-	z-index: 296;
-	width: 338px;
-	min-height: 76px;
-	background-color: transparent;
-	line-height: 43px;
-	text-align: center;
-	font-size: 36px;
-	font-family: asap, sans-serif;
-	font-weight: 700;
-	position: relative;
-	margin-right: -10000px;
-	left: 12px;
-}
-
-#u413
-{
-	z-index: 306;
-	width: 43px;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 3px;
-}
-
-#u419-4
-{
-	z-index: 308;
-	width: 336px;
-	min-height: 22px;
-	background-color: transparent;
-	text-align: center;
-	font-family: asap, sans-serif;
-	font-weight: 400;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 56px;
-	left: 13px;
-}
-
-#ppu410-4
-{
-	width: 0.01px;
-	margin-top: 6px;
-}
-
-#pu410-4
-{
-	width: 0.01px;
-	padding-bottom: 0px;
-	margin-right: -10000px;
-}
-
-#u410-4
-{
-	z-index: 301;
-	width: 141px;
-	min-height: 25px;
-	background-color: transparent;
-	font-family: asap, sans-serif;
-	font-weight: 700;
-	margin-left: 1px;
-	position: relative;
-}
-
-#u408
-{
-	z-index: 300;
-	width: 150px;
-	min-height: 100px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	top: -5px;
-	margin-bottom: -5px;
-	position: relative;
-}
-
-#u411
-{
-	z-index: 305;
-	width: 454px;
-	min-height: 196px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 3px;
-	left: 154px;
-}
-
-#pu635
-{
-	width: 0.01px;
-	margin-left: 154px;
-	margin-top: 16px;
-}
-
-#u635
-{
-	z-index: 312;
-	width: 200px;
-	min-height: 61px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	margin-top: 15px;
-	left: 287px;
-}
-
-#u637
-{
-	z-index: 313;
-	width: 95px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 357px;
-}
-
-#u639
-{
-	z-index: 314;
-	width: 150px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-	left: 153px;
-}
-
-#u657
-{
-	z-index: 315;
-	width: 100px;
-	min-height: 30px;
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	position: relative;
-	margin-right: -10000px;
-}
-
-.PamphletWidget .ThumbGroup .Thumb,.PamphletNextButton,.PamphletPrevButton,.PamphletCloseButton /* pamphlet2 */
-{
-	cursor: pointer;
 }
 
 #pu190
@@ -697,7 +414,7 @@
 
 #u220-4
 {
-	z-index: 358;
+	z-index: 286;
 	width: 301px;
 	min-height: 20px;
 	background-color: transparent;
@@ -709,7 +426,7 @@
 
 #u216
 {
-	z-index: 357;
+	z-index: 285;
 	width: 302px;
 	min-height: 19px;
 	border-style: none;
@@ -1512,11 +1229,6 @@
 	font-weight: 400;
 	margin-left: 1px;
 	position: relative;
-}
-
-#pu364
-{
-	width: 0.01px;
 }
 
 #u364
@@ -2406,12 +2118,6 @@
 	position: relative;
 }
 
-#pu424
-{
-	width: 0.01px;
-	margin-top: -3px;
-}
-
 #u424
 {
 	z-index: 5;
@@ -3101,6 +2807,310 @@
 	position: relative;
 	margin-right: -10000px;
 	left: 561px;
+}
+
+#accordionu833
+{
+	z-index: 305;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #7F7F7F;
+	background-color: transparent;
+	position: fixed;
+	bottom: -2px;
+}
+
+#u834
+{
+	z-index: 306;
+	background-color: transparent;
+}
+
+#u835-3
+{
+	z-index: 307;
+	min-height: 52px;
+	border-color: #FFFFFF;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	line-height: 14px;
+	color: #999999;
+	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	background: #FFFFFF url("../images/myplaylistsclose.png") no-repeat left center;
+}
+
+#u835-3:hover
+{
+	border-color: #FFFFFF;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	min-height: 52px;
+	margin: 0px;
+	background: #FFFFFF url("../images/myplaylistsclose.png") no-repeat left center;
+}
+
+#u835-3:active
+{
+	border-color: #FFFFFF;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	min-height: 52px;
+	margin: 0px;
+	background: #FFFFFF url("../images/myplaylistsclose.png") no-repeat left center;
+}
+
+#u835-3.AccordionPanelTabOpen
+{
+	border-style: none;
+	border-color: transparent;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	min-height: 52px;
+	margin: 0px;
+	background: #FFFFFF url("../images/myplaylists.png") no-repeat left top;
+}
+
+#u835-3.AccordionPanelTabOpen p
+{
+	color: #4F4F4F;
+	visibility: inherit;
+}
+
+.hidpi #u835-3,.hidpi #u835-3:hover,.hidpi #u835-3:active
+{
+	background-image: url("../images/myplaylistsclose_2x.png");
+	background-size: 175px 50px;
+}
+
+.hidpi #u835-3.AccordionPanelTabOpen
+{
+	background-image: url("../images/myplaylists_2x.png");
+	background-size: 175px 50px;
+}
+
+#u836
+{
+	z-index: 310;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #FFFFFF;
+	background-color: #FFFFFF;
+	padding-bottom: 20px;
+}
+
+#u838
+{
+	z-index: 311;
+	width: 204px;
+	min-height: 81px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 103px;
+	left: 99px;
+}
+
+#pu837-4
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-right: -10000px;
+	margin-top: 115px;
+	margin-left: 311px;
+}
+
+#u837-4
+{
+	z-index: 312;
+	width: 210px;
+	min-height: 36px;
+	background-color: transparent;
+	line-height: 22px;
+	font-size: 18px;
+	font-family: asap, sans-serif;
+	font-weight: 700;
+	position: relative;
+}
+
+#u840-4
+{
+	z-index: 316;
+	width: 210px;
+	min-height: 26px;
+	background-color: transparent;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	margin-top: 1px;
+	position: relative;
+}
+
+#u841-4
+{
+	z-index: 324;
+	width: 30px;
+	min-height: 21px;
+	background-color: transparent;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	margin-top: 9px;
+	position: relative;
+}
+
+#u842-4
+{
+	z-index: 320;
+	width: 210px;
+	min-height: 87px;
+	background-color: transparent;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+}
+
+#ppu863-4
+{
+	width: 0.01px;
+	padding-bottom: 0px;
+	margin-right: -10000px;
+	margin-top: 20px;
+	margin-left: 605px;
+}
+
+#pu364,#pu863-4
+{
+	width: 0.01px;
+}
+
+#u863-4
+{
+	z-index: 336;
+	width: 338px;
+	min-height: 76px;
+	background-color: transparent;
+	line-height: 43px;
+	text-align: center;
+	font-size: 36px;
+	font-family: asap, sans-serif;
+	font-weight: 700;
+	position: relative;
+	margin-right: -10000px;
+	left: 75px;
+}
+
+#u864
+{
+	z-index: 340;
+	width: 43px;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 3px;
+	left: 63px;
+}
+
+#u866-4
+{
+	z-index: 342;
+	width: 453px;
+	min-height: 22px;
+	background-color: transparent;
+	line-height: 18px;
+	text-align: center;
+	font-size: 15px;
+	font-family: asap, sans-serif;
+	font-weight: 400;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 56px;
+}
+
+#u857-4
+{
+	z-index: 332;
+	width: 141px;
+	min-height: 19px;
+	background-color: transparent;
+	font-family: asap, sans-serif;
+	font-weight: 700;
+	margin-left: 1px;
+	margin-top: 11px;
+	position: relative;
+}
+
+#pu424,#pu855
+{
+	width: 0.01px;
+	margin-top: -3px;
+}
+
+#u855
+{
+	z-index: 330;
+	width: 150px;
+	min-height: 76px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u853
+{
+	z-index: 331;
+	width: 454px;
+	min-height: 196px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	margin-top: 31px;
+}
+
+#pu851
+{
+	width: 0.01px;
+	margin-left: 103px;
+	margin-top: 17px;
+}
+
+#u851
+{
+	z-index: 329;
+	width: 100px;
+	min-height: 30px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+}
+
+#u849
+{
+	z-index: 328;
+	width: 130px;
+	min-height: 30px;
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	position: relative;
+	margin-right: -10000px;
+	left: 118px;
+}
+
+.PamphletWidget .ThumbGroup .Thumb,.PamphletNextButton,.PamphletPrevButton,.PamphletCloseButton,.AccordionPanelTab /* pamphlet2 */
+{
+	cursor: pointer;
+}
+
+#accordionu833-bw
+{
+	z-index: 305;
 }
 
 body
