--- a/LiveSite/css/index.css
+++ b/LiveSite/css/index.css
@@ -1,7 +1,7 @@
 .version.index /* version checker */
 {
-	color: #0000E9;
-	background-color: #C0A19F;
+	color: #0000EB;
+	background-color: #693547;
 }
 
 .html
@@ -30,14 +30,14 @@
 
 #u124
 {
-	z-index: 348;
+	z-index: 345;
 	height: 111px;
 	background-color: #000000;
 }
 
 #u124-bw
 {
-	z-index: 348;
+	z-index: 345;
 	position: fixed;
 	left: 0px;
 	right: 0px;
@@ -51,7 +51,7 @@
 
 #u149
 {
-	z-index: 353;
+	z-index: 350;
 	width: 48px;
 	background-color: transparent;
 	position: fixed;
@@ -61,7 +61,7 @@
 
 #u132-4
 {
-	z-index: 349;
+	z-index: 346;
 	width: 274px;
 	min-height: 25px;
 	background-color: transparent;
@@ -77,7 +77,7 @@
 
 #u743
 {
-	z-index: 374;
+	z-index: 371;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -87,7 +87,7 @@
 
 #u158-4
 {
-	z-index: 359;
+	z-index: 356;
 	width: 84px;
 	min-height: 31px;
 	background-color: transparent;
@@ -104,7 +104,7 @@
 
 #u751
 {
-	z-index: 376;
+	z-index: 373;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -114,7 +114,7 @@
 
 #u749-4
 {
-	z-index: 363;
+	z-index: 360;
 	width: 131px;
 	min-height: 31px;
 	background-color: transparent;
@@ -131,7 +131,7 @@
 
 #u868
 {
-	z-index: 378;
+	z-index: 375;
 	width: 31px;
 	background-color: transparent;
 	position: fixed;
@@ -141,7 +141,7 @@
 
 #u750-4
 {
-	z-index: 367;
+	z-index: 364;
 	width: 144px;
 	min-height: 31px;
 	background-color: transparent;
@@ -158,7 +158,7 @@
 
 #u156-4
 {
-	z-index: 355;
+	z-index: 352;
 	width: 112px;
 	min-height: 27px;
 	background-color: transparent;
@@ -175,7 +175,7 @@
 
 #u161
 {
-	z-index: 371;
+	z-index: 368;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -186,7 +186,7 @@
 
 #u162
 {
-	z-index: 372;
+	z-index: 369;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -197,7 +197,7 @@
 
 #u163
 {
-	z-index: 373;
+	z-index: 370;
 	width: 43px;
 	height: 2px;
 	background-color: #FFFFFF;
@@ -208,7 +208,7 @@
 
 #u114
 {
-	z-index: 381;
+	z-index: 378;
 	width: 50px;
 	min-height: 25px;
 	border-style: none;
@@ -228,7 +228,7 @@
 
 #u75
 {
-	z-index: 380;
+	z-index: 377;
 	width: 60px;
 	min-height: 64px;
 	border-style: none;
@@ -2939,7 +2939,7 @@
 	border-style: solid;
 	border-color: #FFFFFF;
 	background-color: #FFFFFF;
-	padding: 23px 99px 14px 41px;
+	padding: 23px 99px 84px 41px;
 }
 
 #pu956
@@ -2950,7 +2950,7 @@
 
 #u956
 {
-	z-index: 346;
+	z-index: 343;
 	width: 49px;
 	background-color: transparent;
 	position: relative;
@@ -2959,7 +2959,7 @@
 
 #u955-4
 {
-	z-index: 342;
+	z-index: 339;
 	width: 495px;
 	min-height: 42px;
 	background-color: transparent;
@@ -2975,7 +2975,7 @@
 
 #u864
 {
-	z-index: 336;
+	z-index: 333;
 	width: 43px;
 	background-color: transparent;
 	position: relative;
@@ -2985,7 +2985,7 @@
 
 #u863-4
 {
-	z-index: 332;
+	z-index: 329;
 	width: 338px;
 	min-height: 38px;
 	background-color: transparent;
@@ -3032,7 +3032,7 @@
 
 #u837-4
 {
-	z-index: 308;
+	z-index: 309;
 	width: 210px;
 	min-height: 36px;
 	background-color: transparent;
@@ -3045,7 +3045,7 @@
 
 #u840-4
 {
-	z-index: 312;
+	z-index: 313;
 	width: 210px;
 	min-height: 26px;
 	background-color: transparent;
@@ -3057,24 +3057,26 @@
 
 #u841-4
 {
-	z-index: 320;
+	z-index: 317;
 	width: 30px;
 	min-height: 21px;
 	background-color: transparent;
 	font-family: asap, sans-serif;
 	font-weight: 400;
-	margin-top: 9px;
+	margin-top: 10px;
 	position: relative;
 }
 
-#u842-4
+#u966
 {
-	z-index: 316;
-	width: 210px;
-	min-height: 87px;
+	z-index: 308;
+	width: 220px;
+	min-height: 172px;
+	border-style: none;
+	border-color: transparent;
 	background-color: transparent;
-	font-family: asap, sans-serif;
-	font-weight: 400;
+	top: -3px;
+	margin-bottom: -3px;
 	position: relative;
 }
 
@@ -3088,7 +3090,7 @@
 
 #u866-4
 {
-	z-index: 338;
+	z-index: 335;
 	width: 453px;
 	min-height: 22px;
 	background-color: transparent;
@@ -3102,7 +3104,7 @@
 
 #u857-4
 {
-	z-index: 328;
+	z-index: 325;
 	width: 141px;
 	min-height: 19px;
 	background-color: transparent;
@@ -3121,7 +3123,7 @@
 
 #u855
 {
-	z-index: 326;
+	z-index: 323;
 	width: 150px;
 	min-height: 76px;
 	border-style: none;
@@ -3133,7 +3135,7 @@
 
 #u853
 {
-	z-index: 327;
+	z-index: 324;
 	width: 454px;
 	min-height: 196px;
 	border-style: none;
@@ -3155,7 +3157,7 @@
 
 #u851
 {
-	z-index: 325;
+	z-index: 322;
 	width: 100px;
 	min-height: 30px;
 	border-style: none;
@@ -3167,7 +3169,7 @@
 
 #u849
 {
-	z-index: 324;
+	z-index: 321;
 	width: 130px;
 	min-height: 30px;
 	border-style: none;
